Set the size of the marching ants based on the dpi of the screen

This also handles moving the Krita window from screen to screen
and interactively changing the resolution of the screen.

BUG:456364