libs/ui/kis_selection_decoration.h
@@ -16,6 +16,8 @@
 #include "canvas/kis_canvas_decoration.h"
 
 class KisView;
+class QWindow;
+class QScreen;
 
 class KRITAUI_EXPORT KisSelectionDecoration : public KisCanvasDecoration
 {
@@ -39,6 +41,8 @@ protected:
 private Q_SLOTS:
     void slotStartUpdateSelection();
     void slotConfigChanged();
+    void screenChanged(QScreen *screen);
+    void initializePens();
 
 public Q_SLOTS:
     void selectionChanged();
@@ -47,12 +51,14 @@ private:
     bool selectionIsActive();
 
 private:
+
     KisSignalCompressor m_signalCompressor;
     QPainterPath m_outlinePath;
     QImage m_thumbnailImage;
     QTransform m_thumbnailImageTransform;
     QTimer* m_antsTimer;
     int m_offset;
+    int m_screenScale {1};
 
     QPen m_antsPen;
     QPen m_outlinePen;
@@ -60,6 +66,9 @@ private:
 
     QColor m_maskColor;
     bool m_antialiasSelectionOutline;
+
+    QWindow *m_window;
+    QScreen *m_screen;
 };
 
 #endif
